# mex_cmake

./: .gitignore  LICENSE  README.md
mex_eigen/: CMakeLists.txt  call_mex_stuff.m  mex_eigen_pointcloud_test.m  test.cpp  test.mexa64
mex_openCV_edit/: .gitignore  CMakeLists.txt  mex_openCV_edit.cpp  mex_openCV_edit_TEST.m
mex_sum_of_elements/: .gitignore  CMakeLists.txt  mex_SumOfElements_TEST.m  mex_sum_of_elements.cpp
